--- a/package.json
+++ b/package.json
@@ -18,16 +18,19 @@
   "type": "commonjs",
   "dependencies": {
     "apollo-server-express": "^3.13.0",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^3.0.3",
     "express": "^4.17.1",
     "graphql": "^16.11.0",
+    "k6-html-reporter": "^1.0.5",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "chai": "4.5.0",
     "chai-exclude": "^2.1.1",
+    "cross-env": "^10.1.0",
     "dotenv": "^17.2.2",
     "jsonwebtoken": "^9.0.2",
+    "k6-reporter": "github:benc-uk/k6-reporter",
     "mocha": "^11.7.1",
     "mochawesome": "^7.1.3",
     "sinon": "^21.0.0",
